Destaque no item selecionado das listas
Ajustes nos arquivos do projeto e adicionado diretiva que gerencia
class='active' nos itens de lista

--- a/partials/left-menu.html
+++ b/partials/left-menu.html
@@ -1,7 +1,5 @@
-<div class="row">
-    <ul class="nav">
-        <li><a href="#/">Página Inicial</a></li>
-        <li><a href="#/basico">Começe aqui</a></li>
-        <li><a href="#/filtro">Filtro</a></li>
-    </ul>      
-</div>
+<ul class="nav nav-pills nav-stacked">
+  <li><a href="#/">Página Inicial</a></li>
+  <li><a href="#/basico">Começe aqui</a></li>
+  <li><a href="#/filtro">Filtro</a></li>
+</ul>
