Ajustes diversos e adicionado modulo formulário

--- a/partials/left-menu.html
+++ b/partials/left-menu.html
@@ -1,5 +1,6 @@
 <ul class="nav nav-pills nav-stacked">
-  <li><a href="#/">Página Inicial</a></li>
+  <!-- <li><a href="#/">Página Inicial</a></li> -->
   <li><a href="#/basico">Começe aqui</a></li>
+  <li><a href="#/formulario">Formulário</a></li>
   <li><a href="#/filtro">Filtro</a></li>
 </ul>
