--- a/partials/header.html
+++ b/partials/header.html
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#/">Angular</a>
+      <a class="navbar-brand" href="#/">
+        <i class="glyphicon glyphicon-home"></i> Home
+      </a>
     </div>
   </div>
 </nav>
