--- a/partials/left-menu.html
+++ b/partials/left-menu.html
@@ -2,4 +2,5 @@
   <li><a href="#/basico">Começe aqui</a></li>
   <li><a href="#/formulario">Formulário</a></li>
   <li><a href="#/filtro">Filtro</a></li>
+  <li><a href="#/diretiva">Diretiva</a></li>
 </ul>
