--- a/partials/left-menu.html
+++ b/partials/left-menu.html
@@ -1,5 +1,5 @@
 <ul class="nav nav-pills nav-stacked">
-  <li><a href="#/basico">Começe aqui</a></li>
+  <li><a href="#/basico">Comece aqui</a></li>
   <li><a href="#/formulario">Formulário</a></li>
   <li><a href="#/filtro">Filtro</a></li>
   <li><a href="#/diretiva">Diretiva</a></li>
